@@ -6,6 +6,7 @@ Version 4.0.0 - DEV
  - Introduce REST API; used by judgedaemon to communicate with domserver.
  - Store recognized language extensions in database and query from
    submit client through REST API.
+ - Show diff of team and reference output even if run stopped prematurely.
  - Update jscolor and sorttable javascript to latest upstream versions.
  - Misc. minor bugs fixed reported by Coverity scan.
  - Replace flex++ by flexc++, fixes a missing build dep. and code cleanup.
